# rl_uav_ctrl

./: .gitignore  README.md  acados_ocp.json
c_generated_code/: Makefile  acados_solver_pendulum_ode.c  acados_solver_pendulum_ode.h  main_pendulum_ode.c
c_generated_code/pendulum_ode_cost/: pendulum_ode_cost_y_0_fun.c  pendulum_ode_cost_y_0_fun_jac_ut_xt.c  pendulum_ode_cost_y_0_hess.c  pendulum_ode_cost_y_e_fun.c  pendulum_ode_cost_y_e_fun_jac_ut_xt.c  pendulum_ode_cost_y_e_hess.c  pendulum_ode_cost_y_fun.c  pendulum_ode_cost_y_fun_jac_ut_xt.c  pendulum_ode_cost_y_hess.c
examples/: FORCESNLPsolver_model.c  basic_usage.py  ppo_hover_eval.py  ppo_hover_train.py
examples/FORCESNLPsolver/: FORCESNLPsolver.m  FORCESNLPsolver_interface.c  FORCESNLPsolver_model.c
forces_pro_client/: BackwardEuler.m  BackwardEuler.p  FORCES_NLP.m  FORCES_NLP.p  FORCEScleanup.m  FORCEScleanup.p  FORCESconfigureClient.m  FORCESconfigureClient.p  FORCESdiagnostics.m  FORCESdiagnostics.p  FORCESversion.m  FORCESversion.p  ForcesAdMode.m  ForcesAdMode.p  ForcesAdTool.m  ForcesAdTool.p  ForcesAdToolIsCasadi.m  ForcesAdToolIsCasadi.p  ForcesAdToolIsSymbolicMathToolbox.m  ForcesAdToolIsSymbolicMathToolbox.p  ForcesAdToolVersion.m  ForcesAdToolVersion.p  ForcesAutotune.m  ForcesAutotune.p  ForcesAutotuneOptions.m  ForcesAutotuneOptions.p  ForcesCacheClass.m  ForcesCacheClass.p  ForcesCacheSolverResults.m  ForcesCacheSolverResults.p  ForcesCallVarargFunction.p  ForcesCasadiFunction.m  ForcesCasadiFunction.p  ForcesCasadiSxMxDmToMatlabMat.p  ForcesCasadiThreeFunction.m  ForcesCasadiThreeFunction.p  ForcesCellArrayFromUnsanitizedInput.m  ForcesCellArrayFromUnsanitizedInput.p  ForcesCheckPythonVersion.m  ForcesCheckPythonVersion.p  (+223 more)
forces_pro_client/+CodeGen/: CodeGen.m  CodeGen1.m
forces_pro_client/+ForcesWeb/: SSLCertificateFiles.m  ServerCertificates.m  ServerCertificates.p  ServerConnections.m  ServerConnections.p  ServerResponse.m  ServerResponse.p  WSDLcall.m  WSDLcall.p  WSDLclass.m  WSDLclass.p  defaultServerConnection.m  download.m  download.p  finalizeWSDL.m  finalizeWSDL.p  generateLicenseFile.m  generateLicenseFile.p  generateSolver.m  generateSolver.p  getCertificatePath.m  getCertificatePath.p  getServerOfflineDate.m  getServerOfflineDate.p  (+12 more)
forces_pro_client/examples/StandaloneExecution/Cpp/: CMakeLists.txt  OverheadCraneSample.m  crane.cpp  crane.h
ltf/: ddpg.py  ddpg_eval.py  ddpg_path_test.py  ddpg_pathtrack_env.py  ddpg_test.py  ddpg_train.py  ddpg_trck_train.py  env_helper.py  reward.py
rotorpy/: environments.py
(+485 files in other folders)
